workspace-sf/force-app/main/default/objects/DominioIntegracao__mdt/DominioIntegracao__mdt.object-meta.xml
<CustomObject>
    <label>Domínio de integração</label>
    <pluralLabel>Domínios de integração</pluralLabel>
</CustomObject>