workspace-sf/force-app/main/default/objects/DominioIntegracao__mdt/fields/AreaIntegracao__c.field-meta.xml
<CustomField>
    <fullName>AreaIntegracao__c</fullName>
    <label>Área da integração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>