workspace-sf/force-app/main/default/objects/DominioIntegracao__mdt/fields/TipoIntegracao__c.field-meta.xml
<CustomField>
    <fullName>TipoIntegracao__c</fullName>
    <label>Tipo de Integração</label>
    <length>255</length>
    <type>Text</type>
</CustomField>