workspace-sf/force-app/main/default/objects/DominioIntegracao__mdt/fields/TipoObjeto__c.field-meta.xml
<CustomField>
    <fullName>TipoObjeto__c</fullName>
    <label>Tipo de Objeto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>