workspace-sf/force-app/main/default/objects/DominioIntegracao__mdt/listViews/TodosDominios.listView-meta.xml
<ListView>
    <fullName>TodosDominios</fullName>
    <columns>MasterLabel</columns>
    <columns>Codigo__c</columns>
    <columns>AreaIntegracao__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>Todos os domínios</label>
</ListView>